--- a/assignment3.ipynb
+++ b/assignment3.ipynb
@@ -112,7 +112,7 @@
     "        A Python list sorted based on the day of activity change\n",
     "    '''\n",
     "    \n",
-    "    return well_list"
+    "    return"
    ]
   },
   {
